# agents-course

./: .gitignore  pyproject.toml
Part 1/: 1 - simple graph.py  2 - simple chatbot.py  3 - simple chatbot with memory and iteration limit.py
Part 2/: 4 - react agent using tools.py  5 - chatbot with web search.py  6 - chatbot with intelligent shutting.py
Part 3/: 7 - chatbot with RAG.py  8 - long-term memory across threads.py
